tests/baselines/reference/externalModuleRefernceResolutionOrderInImportDeclaration.errors.txt
==== tests/cases/compiler/externalModuleRefernceResolutionOrderInImportDeclaration_file3.ts (1 errors) ====
    ///<reference path='externalModuleRefernceResolutionOrderInImportDeclaration_file2.ts'/>
    import file1 = require('externalModuleRefernceResolutionOrderInImportDeclaration_file1');
    file1.foo();
          ~~~
!!! externalModuleRefernceResolutionOrderInImportDeclaration_file3.ts(3,7): error TS2094: The property 'foo' does not exist on value of type 'typeof file1'.
    file1.bar();
    
    
==== tests/cases/compiler/externalModuleRefernceResolutionOrderInImportDeclaration_file1.ts (0 errors) ====
    export function foo() { };
    
==== tests/cases/compiler/externalModuleRefernceResolutionOrderInImportDeclaration_file2.ts (0 errors) ====
    declare module "externalModuleRefernceResolutionOrderInImportDeclaration_file1" {
        export function bar();
    }
    
    